crates/ddlog-syntax/tests/validation/fail/too_many_function_arg_commas.dl
// kind:item validate:true pass:false ignore:false file:'ddlog-syntax/src/validation/extra_commas.rs' line:95 column:3
fn foo(foo: Bar,, bar: Baz) {}
